# puc-docket-rag

./: .gitignore  AGENTS.md  README.md  pdr.toml  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
decisions/: DEC-001-citation-faithfulness-contract.md  DEC-002-stdlib-tfidf-engine-for-v0.1.md
docs/: first-pr.md
schemas/: cost_allocation_rule.schema.json
scripts/: validate_schemas.py  voice_lint.py
specs/0001-foundation/: acceptance.md  design.md  requirements.md  tasks.md
specs/0002-design/: acceptance.md  design.md  requirements.md  tasks.md
src/pdr/: __init__.py  chunk.py  cli.py  config.py  demo.py  extract.py  index.py  ingest.py  search.py
tests/: test_chunk.py  test_demo.py  test_search.py
tests/fixtures/va/PUR-2024-00001/: fixture.meta.json  pages.jsonl
