[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdr"
version = "0.1.0"
description = "puc-docket-rag v0.1: stdlib-only ingest/chunk/index/search/extract over one VA docket fixture"
requires-python = ">=3.11"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "puc-docket-rag" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
pdr = "pdr.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
